trunk/Archive2/dc/88a577a0dc2e95/output
kill: Operation not permitted
kill: Operation not permitted
kill: Operation not permitted
main.cpp: In function ‘int main(int, char**)’:
main.cpp:76:73: error: initializer fails to determine size of ‘out’
     unsigned char out[] = new unsigned char[ sizeof( "A000000003" ) / 2 ];
                                                                         ^
main.cpp:76:73: error: array must be initialized with a brace-enclosed initializer
main.cpp:79:5: error: expected ‘;’ before ‘for’
     for ( int i = 0; i < sizeof( "A000000003" ) / 2; ++i )
     ^
main.cpp:79:22: error: ‘i’ was not declared in this scope
     for ( int i = 0; i < sizeof( "A000000003" ) / 2; ++i )
                      ^
main.cpp:79:58: error: expected ‘;’ before ‘)’ token
     for ( int i = 0; i < sizeof( "A000000003" ) / 2; ++i )
                                                          ^
